# bootstrapping-os-environments

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.rst  LICENSE  README.md  Taskfile.yml  brew-cask-fonts.sh  brew-cask-fonts.txt  brew-cask.sh  brew.sh  brew.txt  cabal.sh  download.sh  env.fish  env.sh  environment.yml  gem.sh  index.html  install.sh  list-installed-packages.sh  makefile  manual.md  mas.sh  npm.sh  objects.inv  pip.sh  pyproject.toml  searchindex.js  sleep.sh  sort.py  upgrade.sh
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  readme.doctree
.doctrees/api/: bsos.conda_env.doctree  bsos.conda_helper.doctree  bsos.conda_web_api.doctree  bsos.core.doctree  bsos.doctree  bsos.util.doctree  modules.doctree
.github/: dependabot.yml
.github/workflows/: conda-generate.yml  sphinx.yml  test-installers.yml  test.yml
_modules/: index.html
_modules/bsos/: index.html
_sources/api/: bsos.conda_env.rst.txt  bsos.conda_helper.rst.txt  bsos.conda_web_api.rst.txt  bsos.core.rst.txt  bsos.rst.txt  bsos.util.rst.txt  modules.rst.txt
_static/: documentation_options.js  pygments.css
api/bsos/: index.html
api/bsos.conda_env/: index.html
api/bsos.conda_helper/: index.html
api/bsos.conda_web_api/: index.html
api/bsos.core/: index.html
api/bsos.util/: index.html
api/modules/: index.html
arch/: install.sh  post-install.sh  readme.md
archive/: .gitignore  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.rst  Taskfile.yml  environment.yml  pyproject.toml
archive/arch/: readme.md
archive/common/: basher-upgrade.sh  basher.sh  cabal.sh  code.sh  code_remove.py  gem.sh  npm.txt  tex.txt
archive/conda/: conda.csv  jax-metal.yml  jax.yml  py310_linux-ppc64le.yml  py310_osx-64.yml  py310_osx-arm64.yml  py311_linux-aarch64.yml  py311_linux-ppc64le.yml  py311_osx-64.yml  py311_osx-arm64.yml  py312_linux-ppc64le.yml  py312_osx-64.yml  py312_osx-arm64.yml  py313_linux-64.yml  py313_linux-aarch64.yml  py313_osx-arm64.yml  py38_linux-64.yml  py38_osx-64.yml  py38_osx-arm64.yml  py39_linux-ppc64le.yml  py39_osx-64.yml  py39_osx-arm64.yml  system_linux-ppc64le.yml  system_osx-64.yml  system_osx-arm64.yml
archive/debian/: README.md  apt.sh  apt.txt  brew.txt  deb.sh  list-installed-packages.sh  list-update.sh  raspbian.txt
archive/docs/: badges.csv  conf.py  installation.rst
archive/install/: README.md  anbox.sh  basher.sh  bottom-deb.sh  bottom.sh  btop-linux.sh  btop.sh  class.sh  clifton.sh  devtunnel.sh  entr-reload-browser.sh  fftw.sh  gh.sh  gsl.sh  joshuto.sh  libarchive.sh  linkcheck.sh  llama.sh  mediainfo.sh  mpibash.sh  pkgsrc-install.sh  pyarcreader.sh  surface-linux-sign-init.sh  surface-linux-sign.sh  vscode.sh  whisper.sh  windscribe.sh  zellij.sh  zsh.sh
archive/macOS/: amd-accelerate.sh  brew-cask-fonts.txt  brew-cask.txt  brew.txt  com.local.KeyRemapping.plist  default-open.tsv  install-cocoa-emacs-emulation.sh  list-installed-packages.sh  list_update.py  mas.sh  mas.txt  nix-darwin.sh  sleep.sh
archive/nix/: nix.sh
archive/rhel/: README.md  format-standard.sh  format.sh  install.sh  package_info.py
authors/: index.html
changelog/: index.html
common/: basher.sh  basher.txt  cabal.sh  cabal.txt  code-gen-txt.sh  code.sh  code.txt  conda.sh  conda.txt  gem.sh  iso-to-usb.sh  npm.sh  npm.txt  pip.sh  pip.txt  tex.sh
completion/: generate.sh
conda/: conda.csv  jax-metal.yml  jax.yml  jupyterlab-lock.yml  jupyterlab-test.py  jupyterlab.csv  jupyterlab_linux-64.yml  jupyterlab_linux-ppc64le.yml  py310-lock.yml  py310_linux-64.yml  py310_linux-aarch64.yml  py310_linux-ppc64le.yml  py310_osx-64.yml  py310_osx-arm64.yml  py311-lock.yml  py311_linux-64.yml  py311_linux-aarch64.yml  py311_linux-ppc64le.yml  py311_osx-64.yml  py311_osx-arm64.yml  py312-lock.yml  py312_linux-64.yml  py312_linux-aarch64.yml  py312_linux-ppc64le.yml  py312_osx-64.yml  py312_osx-arm64.yml  py313-lock.yml  py313_linux-64.yml  py313_linux-aarch64.yml  py313_linux-ppc64le.yml  py313_osx-64.yml  py313_osx-arm64.yml  py314-lock.yml  py314_linux-64.yml  py314_linux-aarch64.yml  py314_linux-ppc64le.yml  py314_osx-arm64.yml  py38_linux-64.yml  py38_linux-aarch64.yml  py38_linux-ppc64le.yml  (+14 more)
contributing/: index.html
debian/: README.md  apt.sh  apt.txt  brew.txt  deb.sh  raspbian.sh  raspbian.txt  snap.txt
docs/: README.md
dotfiles/: .bash_profile  .bashrc  .zshenv  .zshrc  README.md  makefile
genindex/: index.html
install/: 21cmfast.sh  README.md  anbox.sh  basher.sh  bootstrap.sh  bottom-no-sudo.sh  bottom.sh  btop-linux.sh  btop.sh  chezmoi.py  class.sh  claude.py  claude_science.py  clifton.py  clifton.sh  code.py  code.sh  codex.py  codex.sh  difft.sh  dotfiles.sh  entr-reload-browser.sh  fastfetch.sh  fftw.sh  fzf.py  gh.py  gh.sh  globusconnectpersonal.sh  gsl.sh  joshuto.sh  libarchive.sh  linkcheck.sh  llama.sh  mamba-env.sh  mamba.py  mamba.sh  mamba_env.py  mediainfo.sh  micromamba.py  mosh.sh  (+22 more)
installation/: index.html
linux-minimal/: README.md  install.sh
macOS/: README.md  brew-cask-fonts.sh  brew-cask-fonts.txt  brew-cask.sh  brew-cask.txt  brew.sh  brew.txt  conda-install.sh  default-open.md  default-open.sh  default-open.tsv  default-vscode.sh  default-vscode.tsv  download.sh  install-cocoa-emacs-emulation.sh  install.sh  key-remapping-hidutil.sh  list-installed-packages.sh  list-update.sh  list_update.py  macOS-to-usb.sh  mas.sh  mas.txt  nix-darwin.sh  port-install.sh  port-search.sh  port-uninstall.sh  port.sh  port.txt  sleep.sh  upgrade.sh
nix/: flake.nix
py-modindex/: index.html
readme/: index.html
rhel/: dnf-all.txt  dnf-all.yaml  format-standard.sh  format.sh  install-zfs.sh  install.sh  what-provides.py  what-provides.sh  yum.txt
search/: index.html
suse/: README-OpenHPC.md  README.md
tests/: test_core.py
ubuntu/: apt.sh  apt.txt  deb.sh  snap.sh
unix-minimal/: README.md  bootstrap-xrootd.sh  bootstrap.sh  install.sh
windows/: README.md  Taskfile.yml  choco.config  winget.json
(+154 files in other folders)
